--- a/src/assets/styles/cmps/_labels-filter.scss
+++ b/src/assets/styles/cmps/_labels-filter.scss
@@ -48,6 +48,7 @@
         grid-column: 2;
         grid-row: 1;
         margin-bottom: 5px;
+        background-color: $clr6;
 
         & span {
             display: flex;
